# jie_shao

./: README.md
agribot_control/: CMakeLists.txt  package.xml
agribot_control/launch/: agribot_control.launch  agribot_gazebo_control.launch  agribot_rviz.launch  agribot_sim.launch
agribot_control/urdf/: agribot.gazebo  agribot.xacro
agribot_description/: CMakeLists.txt  package.xml
agribot_description/launch/: display.launch
agribot_gazebo/: CMakeLists.txt  package.xml
agribot_gazebo/env-hooks/: agribot_gazebo.dsv.in
agribot_gazebo/launch/: agribot_farm.launch  agribot_farm.launch.py  empty_world.launch
agribot_gazebo/models/mud_box/: model.config  model.sdf
agribot_gazebo/scripts/: gzserver_wrapper.sh  preprocess_world.py
agribot_gazebo/urdf/: agribot_raw.urdf
agribot_gazebo/worlds/: farmWith4CropRows.world  farm_world_preprocessed.world  generate_4rows.py
agribot_joystick/: CMakeLists.txt  package.xml
agribot_joystick/config/: agribot_joystick.yaml
agribot_joystick/launch/: agribot_joystick.launch
agribot_joystick/src/: agribot_joystick.cpp
agribot_launch/: CMakeLists.txt  package.xml
agribot_launch/launch/: base.launch  camera_umd.launch  demo.launch  drive.launch  drive_base.launch  emlid_gps.launch  gps.launch  imu.launch  localization.launch  px4flow.launch  sensors.launch  servo.launch  zed.launch
agribot_local_planner/: CMakeLists.txt  agribot_local_planner_plugin.xml  package.xml
agribot_local_planner/include/: agribot_local_planner.h
agribot_local_planner/params/: agribot_local_planner.yaml
agribot_local_planner/src/: agribot_local_planner.cpp
agribot_navigation/: CMakeLists.txt  package.xml
agribot_navigation/launch/: agribot_map.launch  agribot_move.launch  agribot_move.launch.py  agribot_navigation.launch
agribot_navigation/params/: base_local_planner_params.yaml  costmap.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  nav2_params.yaml
agribot_navigation/src/: send_goal.cpp
agribot_visual_servoing/: CMakeLists.txt  package.xml
agribot_visual_servoing/include/agribot_visual_servoing/: crop_row_detector.hpp
agribot_visual_servoing/launch/: visual_servoing.launch.py
agribot_visual_servoing/rviz/: visual_servoing.rviz
agribot_visual_servoing/src/: crop_row_detector.cpp  visual_servoing_node.cpp
