<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesxsd="1"?>
<package format="3">
  <name>agribot_control</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for agribot_control</p>
    <p>This package contains configuration data, 3D models and launch files
for agribot_control robot</p>
  </description>
  <author>me</author>
  <maintainer email="alireza.elecat@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>