<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesxsd="1"?>
<package format="3">
  <name>agribot_description</name>
  <version>0.0.0</version>
  <description>The agribot_description package</description>
  <maintainer email="peeyush@todo.todo">peeyush</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>