<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesxsd="1"?>
<package format="3">
  <name>agribot_local_planner</name>
  <version>0.0.0</version>
  <description>The agribot_local_planner package</description>
  <maintainer email="Alireza.Ahmadi@uni-bonn.de">Alireza Ahmadi</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/agribot_local_planner_plugin.xml"/>
  </export>
</package>